# LambdaCalculus

./: CMakeLists.txt  README.md  ins.txt
inc/lexical/: Lexical.hh  Token.hh
inc/parser/: Parser.hh
inc/syntax/: AST.hh  Syntax.hh  Term.hh
src/: AST.cc  CMakeLists.txt  Term.cc  main.cc
test/: CMakeLists.txt
test/lexical/: Lexical.cc
test/parser/: Parser.cc
test/syntax/: AST.cc  Syntax.cc  Term.cc
